overflow bug fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 
 body{
   background: #0d030c;
+  overflow-x: hidden;
 }
 
 .hero-bg{
